--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_activity_connection">Connection</string>
     <string name="connection_button">Log in</string>
     <string name="welcome_message1">Welcome to</string>
+    <string name="username">Email</string>
+    <string name="password">Password</string>
+    <string name="register_button">Register</string>
 </resources>
