--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,9 @@
     <string name="title_activity_connection">Connection</string>
     <string name="connection_button">Log in</string>
     <string name="welcome_message1">Welcome to</string>
-    <string name="username">Email</string>
+    <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="register_button">Register</string>
     <string name="log_out">Log out</string>
+    <string name="username">Username</string>
 </resources>
