--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="register_button">Register</string>
     <string name="log_out">Log out</string>
     <string name="username">Username</string>
+    <string name="titles">titles</string>
 </resources>
