Late nigth commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="log_out">Log out</string>
     <string name="username">Username</string>
     <string name="titles">titles</string>
+    <string name="friendEmail">Add your friend\'s email</string>
 </resources>
