--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="username">Username</string>
     <string name="titles">titles</string>
     <string name="friendEmail">Add your friend\'s email</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
